Pdf model: cancel process when out file name is not provided

BUG: 497272